# OptiX-Point-Cloud

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Camera.hpp  Distribution.cpp  Gui.cpp  Point.h  PointsCloud.cpp  PointsCloud.hpp  Record.hpp  Scene.cpp  SimpleGLRect.cpp  Triangle.h  common.cpp  common.hpp  helper_conversion.h  helper_math.h  main.cpp  ray.cu  ray.cuh
core/: SuperSampling.cu  SuperSampling.h
core/cuda/: check.cpp  check.h  managed_device_ptr.cpp  managed_device_ptr.h  math.h
core/optix/: check.cpp  check.h
core/utility/: debug.h  no_copy.h  time.cpp  time.h
examples/: ArrayView.cpp  SuperSamplingInterpolation.cpp
report/: 19_01.drawio  README.md  Rapport.md  first_page.pptx
report/svg/: pipeline_schema.drawio
screenshots/: pseudo-code.c
src/: Application.h  Camera.hpp  Distribution.hpp  Gui.cpp  Gui.hpp  OpenGL.hpp  OrbitalControls.hpp  Point.h  PointsCloud.cpp  PointsCloud.hpp  Record.hpp  Scene.cpp  Scene.hpp  SimpleGLRect.cpp  SimpleGLRect.hpp  Transform.hpp  common.cpp  common.hpp  git.h  helper_conversion.h  helper_math.h  main.cpp  ray.cu  ray.cuh  stb.cpp
src/core/: SuperSampling.cu  SuperSampling.h
src/core/cuda/: Pbo.cpp  Pbo.h  StreamScatter.cpp  StreamScatter.h  check.cpp  check.h  managed_device_ptr.cpp  managed_device_ptr.h  math.h
src/core/cuda/detail/: helper_math.h
src/core/gl/: check.h
src/core/optix/: stubs.cpp
src/core/utility/: ArrayView.h  no_copy.h  string.h
src/examples/: SuperSamplingInterpolation.cpp
src/ssaa/: Context.h  GuiPreview.cpp  GuiPreview.h  Options.cpp  Options.h  Parameters.cpp  Parameters.h  SuperSampling.cu  SuperSampling.h  Type.cpp  Type.h  patterns.h
test/: a.exp  function_pointer.cu
